# chess

./: .gitignore  CMakeLists.txt  README.md  build.sh
src/: main.cpp
src/engine/: board.hpp  fen.hpp  move.hpp  movegenerator.hpp  piece.hpp
src/render/: window.hpp
